# webfang

./: .gga  .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGES.md  Cargo.toml  DEVELOPMENT.md  README.md  REFACTOR_LOG.md  bacon.toml  build.rs  deny.toml  issue1_body.md  issue2_body.md  justfile  mise.toml  nextest.toml  rust-toolchain.toml
crates/rust_scraper_ai/: Cargo.toml
crates/rust_scraper_ai/src/: lib.rs
crates/rust_scraper_ai/src/infrastructure_ai/: chunk_id.rs  chunker.rs  inference_engine.rs  mod.rs  model_cache.rs  model_downloader.rs  relevance_scorer.rs  semantic_cleaner_impl.rs  sentence.rs  threshold_config.rs  tokenizer.rs
crates/rust_scraper_cli/: Cargo.toml
crates/rust_scraper_cli/src/: main.rs
crates/rust_scraper_mcp/: Cargo.toml
crates/rust_scraper_mcp/examples/: mcp_server.rs  mcp_server_stdio.rs
crates/rust_scraper_mcp/src/: lib.rs
crates/rust_scraper_mcp/src/mcp_server/: mod.rs  params.rs  selector_service.rs  server.rs  state.rs
crates/rust_scraper_mcp/src/mcp_server/handlers/: content.rs  obsidian.rs  scraping.rs
crates/rust_scraper_mcp/tests/: mcp_protocol.rs  selector_integration.rs
crates/rust_scraper_mcp/tests/snapshots/: selector_integration__empty_page.snap
crates/rust_scraper_tui/: Cargo.toml
crates/rust_scraper_tui/src/: lib.rs
crates/rust_scraper_tui/src/tui/: action.rs  app.rs  collapsible_config.rs  config_form.rs  mod.rs  modal.rs  progress_view.rs  progress_widget.rs  tui_terminal.rs  url_selector.rs
crates/rust_scraper_tui/tests/: widget_render.rs
crates/webfang_ai/: Cargo.toml
crates/webfang_ai/src/: lib.rs
crates/webfang_ai/src/infrastructure_ai/: cache_config.rs  chunk_id.rs  chunker.rs  embedding_ops.rs  inference_engine.rs  mod.rs  model_cache.rs  model_downloader.rs  relevance_scorer.rs  semantic_cleaner_impl.rs  sentence.rs  threshold_config.rs  tokenizer.rs
crates/webfang_ai/tests/: semantic_cleaner_pipeline.rs
crates/webfang_cli/: Cargo.toml
crates/webfang_cli/src/: main.rs
crates/webfang_core/: Cargo.toml
crates/webfang_core/src/: di.rs  error.rs  lib.rs
crates/webfang_core/src/adapters/: mod.rs
crates/webfang_core/src/adapters/detector/: mime.rs
crates/webfang_core/src/adapters/downloader/: mod.rs
crates/webfang_core/src/adapters/extractor/: mod.rs
crates/webfang_core/src/application/: container.rs  crawl_options.rs  crawl_result_repository.rs  crawler_service.rs  deduplicator.rs  elastic_ingestion.rs  export_factory.rs  export_utils.rs  mod.rs  progress_observer.rs  progress_types.rs  rate_limiter.rs  scraper_service.rs  title_resolver.rs  url_filter.rs
crates/webfang_core/src/application/batch/: manager.rs  processor.rs
crates/webfang_core/src/application/crawler/: collector.rs  concurrency_level.rs  crawl_task_ctx.rs  discovery.rs  engine.rs
crates/webfang_core/src/application/http_client/: client.rs  mod.rs
crates/webfang_core/src/cli/: args.rs  commands.rs  completions.rs  config.rs  error.rs  export_flow.rs  mod.rs  orchestrator.rs  scrape_flow.rs  url_discovery.rs
crates/webfang_core/src/domain/: clock.rs  config.rs  crawler_entities.rs  credentials.rs  dom_inspector.rs  exporter.rs  http_error.rs  js_renderer.rs  js_strategy.rs  mod.rs  ports.rs  repositories.rs  semantic_cleaner.rs  url_validation.rs  url_validator.rs  value_objects.rs
crates/webfang_core/src/domain/entities/: content.rs  download.rs  export.rs
crates/webfang_core/src/domain/error/: crawl_error.rs
crates/webfang_core/src/domain/pattern_matching/: mod.rs
crates/webfang_core/src/domain/result/: mod.rs
crates/webfang_core/src/extractor/: mod.rs
crates/webfang_core/src/infrastructure/: autotuning.rs  config.rs  cpu_pool.rs  error.rs  mod.rs  user_agent.rs
crates/webfang_core/src/infrastructure/checkpoint/: mod.rs  store.rs
crates/webfang_core/src/infrastructure/converter/: html_to_markdown.rs  mod.rs  syntax_highlight.rs  wikilinks.rs
crates/webfang_core/src/infrastructure/crawler/: binary_utils.rs  compression_handler.rs  http_client.rs  link_extractor.rs  mod.rs  retry_policy.rs  robots_utils.rs  sitemap_parser.rs  url_queue.rs  url_validator.rs
crates/webfang_core/src/infrastructure/downloader/: chromiumoxide_downloader.rs  cookie_bridge.rs  hybrid_router.rs  mod.rs  obscura_downloader.rs  resource_governor.rs  spa_detector.rs  wreq_downloader.rs
crates/webfang_core/src/infrastructure/export/: mod.rs  state_store.rs
crates/webfang_core/src/infrastructure/http/: waf_engine.rs
crates/webfang_core/src/infrastructure/network/: mod.rs  session_pool.rs
crates/webfang_core/src/infrastructure/observability/: file_trace_layer.rs  logging.rs  metrics_instruments.rs  mod.rs  otel.rs  trace_correlation.rs
crates/webfang_core/src/infrastructure/obsidian/: mod.rs  vault_detector.rs
crates/webfang_core/tests/: correlation_id_fidelity.rs  exit_code_integration.rs  html_content_extraction.rs  sitemap_parsing.rs
crates/webfang_core/tests/common/: mod.rs
crates/webfang_mcp/: Cargo.toml
crates/webfang_mcp/examples/: mcp_server.rs  mcp_server_stdio.rs
crates/webfang_mcp/src/: lib.rs
crates/webfang_mcp/src/mcp_server/: mod.rs  params.rs  selector_service.rs  server.rs  state.rs
crates/webfang_mcp/tests/: discover_sitemap_wiremock.rs  mcp_protocol.rs  selector_integration.rs
crates/webfang_mcp/tests/fixtures/: selector_test_page.html
crates/webfang_mcp/tests/snapshots/: selector_integration__empty_page.snap  selector_integration__invalid_selector.snap  selector_integration__matching_selector.snap  selector_integration__no_selector_backward_compat.snap  selector_integration__zero_match_selector.snap
fuzz/: Cargo.toml  fuzz.toml
fuzz/fuzz_targets/: fuzz_compression_detect.rs  fuzz_convert_to_markdown.rs  fuzz_decompression.rs  fuzz_extract_assets.rs  fuzz_extract_links.rs  fuzz_extract_text.rs  fuzz_html_cleaner.rs  fuzz_parse_content_disposition.rs  fuzz_parse_sitemap.rs  fuzz_readability_parse.rs  fuzz_slug_from_url.rs  fuzz_syntax_highlight.rs  fuzz_url_normalization.rs  fuzz_url_validation.rs  fuzz_waf_detection.rs  fuzz_wikilinks.rs
(+468 files in other folders)
