[package]
name = "rust_scraper"
version = "1.1.0"
edition = "2021"
description = "Production-ready web scraper with Clean Architecture, TUI selector, and sitemap support"
authors = ["GazaDev"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/XaviCode1000/rust-scraper"
homepage = "https://github.com/XaviCode1000/rust-scraper"
documentation = "https://docs.rs/rust_scraper"
keywords = ["scraper", "web", "crawler", "rag", "tui"]
categories = ["command-line-utilities", "web-programming"]
rust-version = "1.88"

[features]
default = []
images = ["dep:mimetype-detector"]
documents = ["dep:mimetype-detector"]
full = ["images", "documents"]
# AI-powered semantic cleaning (Module 3 + 4 + 5 + 7)
ai = [
    "dep:ort",
    "dep:tokenizers",
    "dep:memmap2",
    "dep:ndarray",
    "dep:async-trait",
    "dep:unicode-segmentation",
    "dep:smallvec",
    "dep:wide",
    "dep:tract-onnx",
    "dep:hf-hub",
]

[dependencies]
# CLI - Argument parsing obligatorio
clap = { version = "4", features = ["derive", "env"] }

# HTTP & Networking - wreq with TLS fingerprint impersonation (Layer 2 WAF Evasion)
# wreq 6.0.0-rc.28 is required for prefix-symbols feature (avoids openssl-sys conflicts on Linux)
# wreq 5.3.0 lacks prefix-symbols, which is mandatory per design decision #2
wreq = { version = "6.0.0-rc.28", features = ["gzip", "brotli", "stream", "json", "cookies", "prefix-symbols"] }

# TLS fingerprint emulation presets (Chrome 131, Firefox 133, etc.)
wreq-util = { version = "3.0.0-rc.10", features = ["emulation"] }

# Bytes type for streaming
bytes = "1"

# Content Extraction - Readability algorithm (Firefox Reader mode)
legible = "0.4"
htmd = "0.5"

# Serialization for JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML Parsing for CSS selectors
# NOTE: scraper brings in selectors 0.26. legible→dom_query brings selectors 0.35.
# Both are needed. Do NOT try to unify — they come from different upstream crates.
scraper = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling - anyhow for applications
anyhow = "1"

# Logging estructurado
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Utilities
url = { version = "2", features = ["serde"] }
futures = "0.3"

# HTML to Markdown conversion (preserves headings, code blocks, lists)
# Pinned to <2.21 to avoid edition2024 requirement (needs Rust 1.85+)
html-to-markdown-rs = ">=2.3, <2.21"

# HTML cleaning / boilerplate removal (nav, sidebar, SVG, scripts)
# Used before Markdown conversion for Obsidian-quality output
html-cleaning = "0.3"

# DOM manipulation for HTML cleaning pipeline
# Pinned to 0.24 to match html-cleaning's dependency
dom_query = "0.24"

# Syntax highlighting for code blocks
syntect = "5"

# YAML frontmatter
serde_yaml = "0.9"

# Date/time for frontmatter
chrono = { version = "0.4", features = ["serde"] }

# Regex for parsing code blocks
regex = "1"

# MD5 for image filename hashing
md5 = "0.7"

# SHA256 for content hashing
sha2 = "0.10"

# Error handling
thiserror = "2"

# Random for user agent rotation (TASK-05)
rand = "0.8"

# Cache directory management (TASK-001: User-Agent lazy update)
dirs = "5"

# File locking for concurrent state access (SRE hotfix: Vector 2)
fs2 = "0.4"

# Walking directory for tests
walkdir = "2"

# MIME type detection (optional - for image/document detection)
mimetype-detector = { version = "0.3", optional = true }

# Rate limiting (hardware-aware para HDD) - FASE 1 Web Crawler
# NOTE: governor depends on dashmap 5.x — we use dashmap 6.x directly below.
# Both versions coexist because governor hasn't upgraded. Do NOT try to unify.
governor = "0.6"

# Concurrent data structures - FASE 1 Web Crawler
# NOTE: dashmap 6.x is used directly by url_queue.rs (DashSet).
# governor pulls in dashmap 5.x. Both are needed. Do NOT remove either.
dashmap = "6"

# TUI (preparar para Fase 2) - FASE 1 Web Crawler
ratatui = "0.29"
crossterm = "0.28"

# XML parsing (preparar para Fase 3) - FASE 1 Web Crawler
# NOTE: quick-xml 0.37 is used directly here. syntect→plist pulls in 0.38.
# Both are needed. Do NOT try to unify.
quick-xml = "0.37"
flate2 = "1"

# CPU detection for hardware-aware concurrency
num_cpus = "1"

# Progress bars
indicatif = { version = "0.17", features = ["improved_unicode"] }

# Shell completions
clap_complete = "4"

# Config file parsing
toml = "0.8"

# Cross-platform relative path calculation
pathdiff = "0.2"

# Aho-Corasick for efficient WAF signature matching (O(N) vs O(N*M))
# Used by WafInspector for detecting 50+ WAF signatures in parallel
aho-corasick = "1"

# Lazy statics for WAF signature automaton
once_cell = "1"

# Markdown parsing for wiki-link conversion (event-based)
# Replaces regex-based approach that couldn't handle GFM tables, footnotes, etc.
pulldown-cmark = "0.13"
# Markdown serialization for round-trip conversion
pulldown-cmark-to-cmark = "22"

# UUID for temp file generation (production-ready streaming)
uuid = { version = "1", features = ["v4", "serde"] }
async-compression = { version = "0.4.41", features = ["tokio", "gzip"] }
tokio-util = { version = "0.7.18", features = ["io"] }

# Language detection for Obsidian rich metadata
whatlang = "0.18"

# URL encoding for Obsidian URI protocol
urlencoding = "2.1"

# Slug generation for quick-save filenames
slug = "0.1"
# ONNX runtime for model inference (tract-onnx - 100% Rust)
tract-onnx = { version = "0.21", optional = true }
# Alternative ONNX runtime (ort)
# Pinned to avoid edition2024 requirement (needs Rust 1.85+)
ort = { version = "=2.0.0-rc.10", optional = true }
# Tokenizer for sentence-transformers
tokenizers = { version = "0.21", optional = true }
# HuggingFace Hub for model downloads
hf-hub = { version = "0.5", features = ["tokio"], optional = true }
# Memory-mapped file loading (zero-copy for HDD optimization)
memmap2 = { version = "0.9", optional = true }
# Multi-dimensional arrays for embeddings
ndarray = { version = "0.17", optional = true }
# Async trait support for dyn-compatible traits
async-trait = { version = "0.1", optional = true }

# ============================================================================
# Semantic Chunking Dependencies (feature-gated: --features ai)
# ============================================================================
# Unicode-aware sentence segmentation
unicode-segmentation = { version = "1.12", optional = true }
# Small vector optimization for small collections (mem-smallvec)
smallvec = { version = "1.13", optional = true }
# SIMD operations for cosine similarity (opt-simd-portable)
wide = { version = "0.7", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"


tempfile = "3"
walkdir = "2"
wiremock = "0.6"
proptest = "1.6"

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }

[profile.dev]
# Compilación rápida para desarrollo - máximo speed
opt-level = 0
debug = true

# Siempre optimizar dependencies en dev (mejora perf sin costo extra)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

# Temporary clippy allows to unblock refactoring pipeline
# These are pedantic lints that are too noisy for a codebase in active refactoring
[lints.clippy]
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_raw_string_hashes = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure = "allow"
match_same_arms = "allow"
items_after_statements = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
doc_link_with_quotes = "allow"
wildcard_imports = "allow"
enum_glob_use = "allow"
explicit_iter_loop = "allow"
explicit_into_iter_loop = "allow"
map_unwrap_or = "allow"
if_not_else = "allow"
manual_let_else = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
single_match_else = "allow"
trivially_copy_pass_by_ref = "allow"
