[package]
name = "rust_scraper"
version = "1.1.0"
edition = "2021"
description = "Production-ready web scraper with Clean Architecture, TUI selector, and sitemap support"
authors = ["GazaDev"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/XaviCode1000/rust-scraper"
homepage = "https://github.com/XaviCode1000/rust-scraper"
documentation = "https://docs.rs/rust_scraper"
keywords = ["scraper", "web", "crawler", "rag", "tui"]
categories = ["command-line-utilities", "web-programming"]
rust-version = "1.88"

[features]
default = []
images = ["dep:mimetype-detector"]
documents = ["dep:mimetype-detector"]
full = ["images", "documents"]
# AI-powered semantic cleaning (Module 3 + 4 + 5 + 7)
ai = [
    "dep:tokenizers",
    "dep:unicode-segmentation",
    "dep:smallvec",
    "dep:wide",
    "dep:tract-onnx",
    "dep:hf-hub",
]
# Tokio console for runtime observability (task-starvation debugging)
# Requires: RUSTFLAGS="--cfg tokio_unstable" at compile time
console = ["dep:console-subscriber"]

[dependencies]
# CLI - Argument parsing obligatorio
clap = { version = "4", features = ["derive", "env"] }

# HTTP & Networking - wreq with TLS fingerprint impersonation (Layer 2 WAF Evasion)
# wreq 6.0.0-rc.28+ is required for prefix-symbols feature (avoids openssl-sys conflicts on Linux)
# wreq 5.3.0 lacks prefix-symbols, which is mandatory per design decision #2
wreq = { version = "6.0.0-rc.28", features = ["gzip", "brotli", "stream", "json", "cookies", "prefix-symbols"] }

# TLS fingerprint emulation presets (Chrome 131, Firefox 133, etc.); rc.13 exposes Profile presets.
wreq-util = { version = "3.0.0-rc.10", features = ["emulation"] }

# Bytes type for streaming
bytes = "1"

# Content Extraction - Readability algorithm (Firefox Reader mode)
legible = "0.4"
htmd = "0.5"

# Serialization for JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML Parsing for CSS selectors
# scraper 0.27 uses selectors 0.38. html-cleaning/dom_query removed.
# Down from 3 versions (0.26, 0.33, 0.35) to 2 (0.35, 0.38).
scraper = "0.27"

# Streaming HTML rewriter with CSS selector API (Cloudflare)
# Used for HTML boilerplate removal — no selectors dependency
lol_html = "2"

# Async runtime
# NOTE: "full" includes "unstable" for tokio-console support
tokio = { version = "1", features = ["full"] }

# tokio-console instrumentation (runtime tracing for task-starvation debugging)
# Only enabled via RUSTFLAGS="--cfg tokio_unstable" + --features console
# See src/infrastructure/observability/mod.rs for integration
console-subscriber = { version = "0.4", optional = true }

# Error handling - anyhow for applications
anyhow = "1"

# Logging estructurado
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Utilities
url = { version = "2", features = ["serde"] }
futures = "0.3"

# HTML to Markdown conversion (preserves headings, code blocks, lists)
# Pinned to <2.21 to avoid edition2024 requirement (needs Rust 1.85+)
html-to-markdown-rs = ">=2.3, <2.21"


# Syntax highlighting for code blocks
syntect = "5"

# YAML frontmatter
serde_yaml = "0.9"

# Date/time for frontmatter
chrono = { version = "0.4", features = ["serde"] }

# Regex for parsing code blocks
regex = "1"

# SHA256 for content hashing
sha2 = "0.10"

# Error handling
thiserror = "2"

# Random for user agent rotation (TASK-05)
rand = "0.9"

# Cache directory management (TASK-001: User-Agent lazy update)
dirs = "5"

# File locking for concurrent state access (SRE hotfix: Vector 2)
fs2 = "0.4"

# Walking directory for tests
walkdir = "2"

# MIME type detection (optional - for image/document detection)
mimetype-detector = { version = "0.3", optional = true }

# Rate limiting (hardware-aware para HDD) - FASE 1 Web Crawler
# NOTE: governor depends on dashmap 5.x — we use dashmap 6.x directly below.
# Both versions coexist because governor hasn't upgraded. Do NOT try to unify.
governor = "0.6"

# Redis client for distributed rate limiting (Phase 3)
# Use redis with tokio runtime support and rustls for TLS
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "rustls"] }

# Concurrent data structures - FASE 1 Web Crawler
# NOTE: dashmap 6.x is used directly by url_queue.rs (DashSet).
# governor pulls in dashmap 5.x. Both are needed. Do NOT remove either.
dashmap = "6"

# Hasher for u64-keyed URL deduplication (DashSet<u64, ahash::RandomState>).
# Per-process randomized seed (FR-3 HashDoS resistance). Direct dep — previously
# only transitive under the `ai` feature. Default `std` feature for hash_one().
ahash = { version = "0.8", features = ["std"] }

# TUI (preparar para Fase 2) - FASE 1 Web Crawler
ratatui = "0.29"
catppuccin = "2"
ratatui-form = "0.1.1"
crossterm = { version = "0.28", features = ["event-stream"] }

# XML parsing (preparar para Fase 3) - FASE 1 Web Crawler
# NOTE: quick-xml 0.37 is used directly here. syntect→plist pulls in 0.38.
# Both are needed. Do NOT try to unify.
quick-xml = "0.37"

# CPU detection for hardware-aware concurrency
num_cpus = "1"

# ============================================================================
# Elastic Ingestion (Issue #51) — autotuning + SQLite persistence + CPU pool
# ============================================================================
# SQLite embedded persistence (bundled libsqlite3; chrono/uuid feature gates)
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
# Async SQLite connection pool (WAL-friendly, pooled blocking calls off Tokio)
# NOTE: task pinned "0.15" (nonexistent); 0.13 needs rusqlite 0.38 (conflicts
# with proposal-pinned rusqlite 0.31). Frozen design.md pins no version.
# Resolver-selected max version compatible with rusqlite 0.31 is 0.8.1.
deadpool-sqlite = "0.8"
# Total RAM detection for hardware autotuning (CPU uses num_cpus above)
# NOTE: task pinned "0.10" but that version does not exist on crates.io
# (candidates: 0.9.1, 0.9.0). proposal.md specifies "0.9" — using that.
sys-info = "0.9"
# Promoted from transitive to direct: explicit isolated Rayon thread pool (PR3)
rayon = "1.10"

# Progress bars
indicatif = { version = "0.17", features = ["improved_unicode"] }

# Interactive wizard for guided prompting (Phase 1)
inquire = "0.9"

# Shell completions
clap_complete = "4"

# Config file parsing
toml = "0.8"

# Cross-platform relative path calculation
pathdiff = "0.2"

# Aho-Corasick for efficient WAF signature matching (O(N) vs O(N*M))
# Used by WafInspector for detecting 50+ WAF signatures in parallel
aho-corasick = "1"

# Lazy statics for WAF signature automaton
once_cell = "1"

# Markdown parsing for wiki-link conversion (event-based)
# Replaces regex-based approach that couldn't handle GFM tables, footnotes, etc.
pulldown-cmark = "0.13"

# UUID for temp file generation (production-ready streaming)
uuid = { version = "1", features = ["v4", "v7", "serde"] }
async-compression = { version = "0.4.41", features = ["tokio", "gzip", "deflate", "brotli", "zstd"] }

# Language detection for Obsidian rich metadata
whatlang = "0.18"

# ONNX runtime for model inference (tract-onnx - 100% Rust)
tract-onnx = { version = "0.21", optional = true }
# Tokenizer for sentence-transformers
tokenizers = { version = "0.21", optional = true }
# HuggingFace Hub for model downloads
# CRITICAL: Use rustls-tls to avoid OpenSSL native linking
# Also disable default-tls to prevent pulling native-tls
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "rustls-tls"], optional = true }

# ============================================================================
# Semantic Chunking Dependencies (feature-gated: --features ai)
# ============================================================================
# Unicode-aware sentence segmentation
unicode-segmentation = { version = "1.12", optional = true }
# Small vector optimization for small collections (mem-smallvec)
smallvec = { version = "1.13", optional = true }
# SIMD operations for cosine similarity (opt-simd-portable)
wide = { version = "0.7", optional = true }

# Security updates - force secure versions to address vulnerabilities
rustls-webpki = ">=0.103.12"
time = ">=0.3.47"

# MCP Server (Model Context Protocol) — expose scraper tools to AI agents
rmcp = { version = "1.7", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
axum = "0.8"
schemars = "1.0"

# Observability — OpenTelemetry tracing for MCP tool calls
tracing-opentelemetry = "0.32"
opentelemetry = "0.32"

# Secrets protection (Phase 2: zeroize/secrecy)
secrecy = { version = "0.8", features = ["serde"] }
# Compile-time assertions for type safety
static_assertions = "1.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

criterion = { version = "0.5", features = ["html_reports"] }

tempfile = "3"
walkdir = "2"
wiremock = "0.6"
proptest = "1.6"

[[bench]]
name = "waf_detection"
harness = false

[[bench]]
name = "cosine_similarity"
harness = false
required-features = ["ai"]

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }

[profile.dev]
# Compilación rápida para desarrollo - máximo speed
opt-level = 0
debug = true

# Siempre optimizar dependencies en dev (mejora perf sin costo extra)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

# Temporary clippy allows to unblock refactoring pipeline
# These are pedantic lints that are too noisy for a codebase in active refactoring
[lints.clippy]
doc_markdown = "allow"
uninlined_format_args = "allow"
needless_raw_string_hashes = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure = "allow"
match_same_arms = "allow"
items_after_statements = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
default_trait_access = "allow"
doc_link_with_quotes = "allow"
wildcard_imports = "allow"
enum_glob_use = "allow"
explicit_iter_loop = "allow"
explicit_into_iter_loop = "allow"
map_unwrap_or = "allow"
if_not_else = "allow"
manual_let_else = "allow"
needless_continue = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
single_match_else = "allow"
trivially_copy_pass_by_ref = "allow"



