[workspace]
resolver = "2"
members = [
    "crates/rust_scraper_core",
    "crates/rust_scraper_ai",
    "crates/rust_scraper_tui",
    "crates/rust_scraper_mcp",
    "crates/rust_scraper_cli",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["GazaDev"]
repository = "https://github.com/XaviCode1000/webfang"
homepage = "https://github.com/XaviCode1000/webfang"

[workspace.dependencies]
# Internal crates
rust_scraper_core = { path = "crates/rust_scraper_core" }
rust_scraper_ai = { path = "crates/rust_scraper_ai" }
rust_scraper_tui = { path = "crates/rust_scraper_tui" }
rust_scraper_mcp = { path = "crates/rust_scraper_mcp" }
rust_scraper_cli = { path = "crates/rust_scraper_cli" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP & Networking
wreq = { version = "6.0.0-rc.28", features = ["gzip", "brotli", "stream", "json", "cookies", "prefix-symbols"] }
wreq-util = { version = "3.0.0-rc.10", features = ["emulation"] }
bytes = "1"

# Content Extraction
legible = "0.4"
htmd = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTML Parsing
scraper = "0.27"
lol_html = "2"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Utilities
url = { version = "2", features = ["serde"] }
percent-encoding = "2"
globset = "0.4"
futures = "0.3"
regex = "1"
heck = "0.5"
sha2 = "0.10"
rand = "0.9"
dirs = "5"
num_cpus = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# HTML to Markdown
html-to-markdown-rs = ">=2.3, <2.21"
syntect = "5"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# XML
quick-xml = "0.41"

# Rate limiting
governor = "0.6"
dashmap = "6"
ahash = { version = "0.8", features = ["std"] }

# Observability
indicatif = { version = "0.17", features = ["improved_unicode"] }

# Security
rustls-webpki = ">=0.103.12"
time = ">=0.3.47"

# tokio-console
console-subscriber = "0.4"

# SQLite persistence
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
deadpool-sqlite = "0.8"
sys-info = "0.9"

# Observability
tracing-tree = "0.4"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["http-proto", "reqwest-blocking-client"] }
tracing-opentelemetry = "0.33"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }

# MIME detection
mimetype-detector = "0.3"

# AI features
tokenizers = "0.21"
unicode-segmentation = "1.12"
smallvec = "1.13"
wide = "0.7"
tract-onnx = "0.21"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "rustls-tls"] }

# TUI features
ratatui = { version = "0.29", features = ["palette", "serde"] }
ratatui-form = "0.1.1"
crossterm = { version = "0.28", features = ["event-stream"] }
inquire = "0.9"

# MCP features
rmcp = { version = "1.7", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
schemars = "1.0"

# Competitive Features
jzon-rs-serde = "0.3"
crc32fast = "1"
robotstxt = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
url-normalize = "0.1.1"

# Misc
sysinfo = "0.30"
aho-corasick = "1"
pulldown-cmark = "0.13"
whatlang = "0.18"
walkdir = "2"
fs2 = "0.4"
async-compression = { version = "0.4.41", features = ["tokio", "gzip", "deflate", "brotli", "zstd"] }

# Dev dependencies
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
proptest = "1.6"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false

[profile.core]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
