[package]
name = "rust_scraper_ai"
description = "AI-powered semantic cleaning for rust_scraper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rust_scraper_core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# AI features
tokenizers = { workspace = true }
unicode-segmentation = { workspace = true }
smallvec = { workspace = true }
wide = { workspace = true }
tract-onnx = { workspace = true }
hf-hub = { workspace = true }

# Utilities
sha2 = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
legible = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.clippy]
doc_markdown = "allow"
uninlined_format_args = "allow"
