[package]
name = "rust_scraper_mcp"
description = "Model Context Protocol server for rust_scraper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rust_scraper_core = { workspace = true }

# MCP
rmcp = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
schemars = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
url = { workspace = true }
url-normalize = { workspace = true }
wreq = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
schemars = { workspace = true }
insta = { workspace = true }
scraper = { workspace = true }

[lints.clippy]
doc_markdown = "allow"
uninlined_format_args = "allow"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("ai", "ui", "mcp"))'] }
