[package]
name = "rust_scraper_tui"
description = "Terminal User Interface for rust_scraper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rust_scraper_core = { workspace = true }

# TUI
ratatui = { workspace = true }
ratatui-form = { workspace = true }
crossterm = { workspace = true }
inquire = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
url = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[lints.clippy]
doc_markdown = "allow"
uninlined_format_args = "allow"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("ai", "ui", "mcp"))'] }
